<resources>
    <string name="app_name">鱼游旅行</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_detail">HomeDetailActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="title_activity_verify_cation">VerifyCationActivity</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_to_string_format">Token：%1$s \nRefresh Token：%2$s \nexpires_in：%3$s</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="CashTicket_Rules">使用现金券预订带有返字或减字标识的产品，会扣除您现金券账户中的金额来返给您的奖金或直接抵扣支付金额。</string>
    <string name="OK">确定</string>
    <string name="abroad_guide">出境游攻略</string>
    <string name="accommodation">住宿</string>
    <string name="account_alter_email_hint">邮箱提交只可修改3次，请填写正确的邮箱地址</string>
    <string name="account_alter_email_input">请输入您的邮箱</string>
    <string name="account_alter_nickname_input">请输入新的昵称</string>
    <string name="account_alter_password_input_new">6–18位字母、数字或符号</string>
    <string name="account_alter_password_input_ok">请重复一遍新密码</string>
    <string name="account_alter_password_input_old">请输入旧密码</string>
    <string name="account_alter_password_label_new">新密码</string>
    <string name="account_alter_password_label_ok">确认密码</string>
    <string name="account_alter_password_label_old">旧密码</string>
    <string name="account_alter_password_submit">提交新密码</string>
    <string name="account_alter_truename_hint">* 姓名将用于“奖金、立返账户-提现”的实名信息校验，提现成功后无法再修改</string>
    <string name="account_alter_truename_input">该姓名须与身份证上的姓名一致</string>
    <string name="account_binding">正在绑定…</string>
    <string name="account_login_mobile_input">请输入手机号码</string>
    <string name="account_login_mode_code">无密码快捷登录</string>
    <string name="account_login_mode_third">第三方账户登录</string>
    <string name="account_login_mode_tongcheng">鱼游账号登录</string>
    <string name="account_login_password_input">请输入密码</string>
    <string name="account_login_username_input">请输入手机号码或邮箱</string>
    <string name="account_logining">正在登录…</string>
    <string name="account_registering">正在注册…</string>
    <string name="account_third_manage_alipa">支付宝</string>
    <string name="account_third_manage_bind">立即绑定</string>
    <string name="account_third_manage_sina">新浪微博</string>
    <string name="account_third_manage_tencent">腾讯QQ</string>
    <string name="account_third_manage_unbind">取消绑定</string>
    <string name="account_third_manage_wechat">微信</string>
    <string name="action_submit">提交</string>
    <string name="active_weekend_card_for_you">正在激活周末卡</string>
    <string name="add_collect">添加收藏中</string>
    <string name="add_common_address">+添加新地址</string>
    <string name="add_common_card">添加新常用信用卡</string>
    <string name="add_common_passenger">+添加新乘机人</string>
    <string name="add_invoice_info">请添加邮寄发票信息</string>
    <string name="add_red_package_input_hint">请输入您的红包券号</string>
    <string name="address_checkbox">设为默认地址</string>
    <string name="address_detail">详细地址</string>
    <string name="address_email">邮编</string>
    <string name="address_name">收件人姓名</string>
    <string name="address_phone">收件人手机号码</string>
    <string name="already_upload_to_wsq">已上传分享到微社区</string>
    <string name="app_downloading">应用正在后台下载</string>
    <string name="assistant_add_record_route">正在添加行程</string>
    <string name="assistant_message_add">正在添加</string>
    <string name="assistant_message_submit">正在提交</string>
    <string name="assistant_save_record_route">正在保存行程</string>
    <string name="assistant_tip">点击下一步代表您已阅读并同意</string>
    <string name="assistant_tip1">同程的机票,一出票,就可以预约选座</string>
    <string name="assistant_tip2">您可帮同行的人选座,还可以坐在一起</string>
    <string name="assistant_tip3">预约选座目前只支持在同程购买的机票</string>
    <string name="assistant_tip4">选座成功后请按正常程序办理值机手续</string>
    <string name="back">返回</string>
    <string name="birthday_hint">请输入出生日期</string>
    <string name="book_now">立即预订</string>
    <string name="book_title">预订</string>
    <string name="button_retry">再试试</string>
    <string name="cancel">取消</string>
    <string name="capture_tip">请将二维码放在取景框内，即可自动扫描</string>
    <string name="card_hint">"1.登机证件必须为有效证件原件
2.儿童或婴儿如使用“户口簿”、“出生证明”及“其他”有效证件登机时 ，有效证件上面的“证件号码”栏如无身份证号可以选择出生年月日，格式为：20080808"</string>
    <string name="cate">美食</string>
    <string name="choice_mail_address">添加邮寄地址</string>
    <string name="choice_mail_address_toast">请添加邮寄地址</string>
    <string name="city_default">全国</string>
    <string name="city_select_all_ways">所有路线</string>
    <string name="city_select_editor_hint">请输入目的城市、国家、关键字</string>
    <string name="city_select_my_favourite">我的收藏</string>
    <string name="city_select_no_result">查无结果</string>
    <string name="city_select_no_search_history">无搜索历史</string>
    <string name="city_select_request_err_info">获取热门目的地信息失败，请稍后再试</string>
    <string name="city_select_search_confirm">确定</string>
    <string name="city_select_search_history">搜索历史</string>
    <string name="city_select_search_history_clear">清除搜索历史</string>
    <string name="city_select_title">选择目的城市</string>
    <string name="click_view_more_img">点击查看更多图片</string>
    <string name="coach_loading_ticket_list">正在加载汽车票信息</string>
    <string name="coach_searching_stations">正在加载汽车站</string>
    <string name="coach_searching_ticket_offices">正在加载售票点</string>
    <string name="coin_hint">"1.贡献攻略内容奖励游币，写点评、传图片、纠错反馈三种方式都可获得游币。
2.同一地点首次提交内容，每种方式可分别获取10游币。
 3.传图片和纠错反馈每日上限分别为30游币，写点评每日上限为200游币。"</string>
    <string name="collect">收藏</string>
    <string name="collect_successfully">收藏成功</string>
    <string name="collect_title_concat_format">%1$s的攻略</string>
    <string name="collection_list_find_similar">找相似</string>
    <string name="collection_price_start">起</string>
    <string name="collection_recommend_already_collected">已收藏</string>
    <string name="collection_recommend_line">线路</string>
    <string name="collection_recommend_scenery">景点</string>
    <string name="collection_recommend_tip">客官，为您贴心推荐以下%s</string>
    <string name="collection_recommend_title">相似%s</string>
    <string name="collection_vacation_group_travel">跟团游</string>
    <string name="comment_no_result_tip">没有收到赞</string>
    <string name="comment_result_failed_content">点评失败了，可以重新提交再试试哈～</string>
    <string name="comment_result_failed_retry">重新提交</string>
    <string name="comment_result_failed_title">点评提交失败!</string>
    <string name="comment_result_hint">灰常感谢主人的点评，觉得还不错，就把ta分享给更多的朋友吧！</string>
    <string name="comment_result_success_title">点评提交成功!</string>
    <string name="comment_submit_failed_title">点评提交失败</string>
    <string name="comment_submit_success_title">点评提交成功</string>
    <string name="comment_success_scenery">您已预订了该景点的门票，同程旅游将在月底与景点核对您的入园情况，确认您已经入园游玩后，将于次月5日前，将现金劵返还至您的现金劵账户！</string>
    <string name="comment_success_title">点评成功</string>
    <string name="common_address_noresult_msg">添加一下，买票出游更便捷哦</string>
    <string name="common_card">常用信用卡</string>
    <string name="common_contacts_noresult_msg">添加一下，买票出游更便捷哦</string>
    <string name="common_filter_noresult">木有结果，换个条件再试试</string>
    <string name="common_hint">您还没有常用乘机人，请先添加乘机人</string>
    <string name="common_network_connect_failed_msg">网络连接失败，请检查一下网络设置</string>
    <string name="common_no_cash_noresult_msg">还没有存款，努力存钱吧</string>
    <string name="common_no_collection">木有收藏，赶快把你喜爱的加进来</string>
    <string name="common_no_collection_button_msg">去看看</string>
    <string name="common_no_image_noresult_msg">还没有分享过美景，快去试试吧</string>
    <string name="common_no_message_noresult_msg">还没有消息，再等等咯</string>
    <string name="common_no_network_msg">网络不给力，再试试</string>
    <string name="common_noresult_title">抱歉，暂无结果</string>
    <string name="common_nowifi_button_retry">重新加载</string>
    <string name="common_nowifi_disconnect_tips">请检查网络设置</string>
    <string name="common_nowifi_disconnect_title">网络未开启</string>
    <string name="common_nowifi_networkerror_tips">再试一下</string>
    <string name="common_nowifi_networkerror_title">加载失败</string>
    <string name="common_ordercomb_noresult_msg">您的订单空空如也</string>
    <string name="common_passenger">常用乘机人</string>
    <string name="common_search_noresult">木有结果，再找找看</string>
    <string name="common_server_error_msg">服务器偷懒了，先去其他页面逛逛吧</string>
    <string name="common_walkthrough_download">下载中心</string>
    <string name="commonaddress">常用地址</string>
    <string name="commonpassenger">常用乘机人</string>
    <string name="count">数量</string>
    <string name="countary_guide">国内游攻略</string>
    <string name="cruise_check_in_tips">入住人信息用于为您预留房间，如需修改，请致电4007-991-555</string>
    <string name="cruise_contact_email">邮箱</string>
    <string name="cruise_contact_email_hint">接收电子版出团通知书（可不填）</string>
    <string name="cruise_contact_mobile">手机号</string>
    <string name="cruise_contact_mobile_hint">填写联系人手机号</string>
    <string name="cruise_inland_travel_plan_tips">*以上是系统根据您出行人数规划的最经济出行方案，您若有其它需求，下单后可联系客服更改。</string>
    <string name="cruise_insurance_info">投保信息</string>
    <string name="cruise_invoice_tips">*旅游发票只开取实际支付团费，保险提供定额发票，回团后3个工作日内一起邮寄。</string>
    <string name="cruise_no_result_tips">您可以尝试删除以下筛选条件</string>
    <string name="cruise_order_amount">订单金额：</string>
    <string name="cruise_order_id">订单编号：</string>
    <string name="cruise_payment_success_alipay">恭喜您，支付宝支付成功，扣款中。我们会尽快确认您的预订，稍后您将收到确认短信。</string>
    <string name="cruise_payment_success_credit_card">恭喜您，信用卡信息提交成功，扣款中。我们会尽快确认您的预订，稍后您将收到确认短信。</string>
    <string name="cruise_payment_success_lianlianpay">恭喜您，银行卡支付成功，扣款中。我们会尽快确认您的预订，稍后您将收到确认短信。</string>
    <string name="cruise_payment_success_unionpay">恭喜您，银联支付成功，扣款中。我们会尽快确认您的预订，稍后您将收到确认短信。</string>
    <string name="cruise_payment_success_wechat">恭喜您，微信支付成功，扣款中。我们会尽快确认您的预订，稍后您将收到确认短信。</string>
    <string name="cruise_submit_check_in_tips">*入住人信息用于为您预留房间，提交后如需修改，请联系客服</string>
    <string name="cruise_submit_failure">对不起，订单提交失败！请您重新预订。</string>
    <string name="cruise_submit_failure_hint">若有问题请及时致电,同程旅游客服电话</string>
    <string name="cruise_submit_failure_mobile">对不起，订单提交失败！线路优惠名额不足，请您重新预订。</string>
    <string name="cruise_submit_loading_msg">正在提交中</string>
    <string name="cruise_submit_order">正在提交订单</string>
    <string name="cruise_submit_order_success">恭喜您成功提交订单，我们将尽快确认您的订单。</string>
    <string name="cruise_submit_order_warm_tips">*5分钟内没有收到同程确认短信，请致电4007-991-555</string>
    <string name="cruise_success_warm_tips">请您耐心等待同程旅游给您的确认短信，若未收到，请及时致电4007-991-555转7 如在20:00至次日9：00期间，我们无法为您立即核实位置信息，将在次日早上9：00后处理并回电给您，请您耐心等待</string>
    <string name="cruise_write_order_contact">联系人</string>
    <string name="cruise_write_order_contact_hint">填写联系人姓名</string>
    <string name="d_c_hotel_check_order_card">正在验证信用卡</string>
    <string name="d_c_hotel_load_finish_order">正在查询您的酒店订单</string>
    <string name="d_c_hotel_load_going_order">正在查询您的酒店订单</string>
    <string name="d_c_hotel_load_order_detail">正在查询您的酒店订单</string>
    <string name="d_c_hotel_loading_payinfo">正在加载支付信息</string>
    <string name="login">登录</string>
    <string name="vacation_detail_feiyong_include_title">费用包含</string>
    <string name="vacation_detail_feiyong_include_subtitle">本产品是由公司合作的旅行社提供的相关服务</string>
    <string name="vacation_detail_feiyong_include1">1.机票：交通全程往返团队经济舱机票含税费（团队机票一单开出，不得更改、不得签转、不得退票，如根据航空公司或出镜处规定，机票可签转，改期或退票，我司可协助处理）</string>
    <string name="vacation_detail_fee">费用须知</string>
    <string name="vacation_detail_tips">出游贴士</string>
    <string name="vacation_online_qa">你问我答</string>
    <string name="verify_code_input">请输入验证码</string>
    <string name="verify_code_send">获取验证码</string>
</resources>