<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/login_common_side_margin"
    android:paddingRight="@dimen/login_common_side_margin" >

     <LinearLayout
        android:id="@+id/ll_login_dynamic_input_layout"
        android:layout_width="fill_parent"
        android:layout_height="54.0dip"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_bg_input"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.callhh.android.clearedittext.widget.ClearEditText
            android:id="@+id/et_login_dynamic_account_input"
            style="@style/Account.EditText.Line"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@android:color/transparent"
            android:hint="@string/account_login_mobile_input"
            android:inputType="numberSigned"
            app:iconClear="@drawable/icon_password_delete"
            android:maxLength="13" />

        <TextView
            android:id="@+id/tv_login_dynamic_code_send"
            style="@style/Account.Button.CodeSend"
            android:layout_marginLeft="10.0dip"
            android:text="@string/verify_code_send" />
    </LinearLayout>

    <com.callhh.android.clearedittext.widget.ClearEditText
        android:id="@+id/et_login_dynamic_verificationCode"
        style="@style/Account.EditText.Line"
        android:layout_marginTop="6.0dip"
        android:hint="@string/verify_code_input"
        android:inputType="textPassword"
        app:iconClear="@drawable/icon_password_delete"
        android:maxLength="30" />

    <Button
        android:id="@+id/btn_login_dynamic_commit"
        style="@style/btn_orange"
        android:layout_marginTop="@dimen/login_common_top_margin"
        android:enabled="true"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_nomember_book"
        style="@style/btn_orange"
        android:layout_width="fill_parent"
        android:layout_marginTop="12.0dip"
        android:background="@drawable/btn_nomember_login"
        android:visibility="gone" />

</LinearLayout>