<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="@dimen/common_margin"
    android:paddingRight="@dimen/common_margin" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <View
                android:id="@id/nowifi_margin_top_view"
                android:layout_width="0.0dip"
                android:layout_height="0.0dip" />

            <TextView
                android:id="@id/load_tv_nowifi"
                style="@style/tv_warning_info_null_style"
                android:drawableTop="@drawable/icon_no_result_network"
                android:gravity="center"
                android:text="@string/common_nowifi_disconnect_title"
                android:textSize="@dimen/text_size_list" />

            <TextView
                android:id="@id/load_tv_nowifi_tips"
                style="@style/tv_warning_info_null_style"
                android:gravity="center"
                android:paddingTop="3.0dip"
                android:text="@string/common_nowifi_disconnect_tips"
                android:visibility="gone" />

            <Button
                android:id="@id/load_btn_refresh_net"
                style="@style/btn_err_layout_white_style"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_marginLeft="39.0dip"
                android:layout_marginRight="39.0dip"
                android:layout_marginTop="18.0dip"
                android:text="@string/common_nowifi_button_retry" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>