<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_twoline_common"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/rl_vacation_detail_comment_container"
        android:layout_width="fill_parent"
        android:layout_height="160.0dip"
        android:background="@drawable/selector_white_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/tv_vacation_detail_comment_title"
            style="@style/tv_list_primary_style"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/icon_travel_details_expense"
            android:drawablePadding="11.0dip"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/common_margin"
            android:paddingRight="@dimen/common_margin"
            android:text="@string/vacation_detail_fee" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_vacation_detail_comment_title"
            android:layout_marginLeft="17dp"
            android:minLines="1"
            android:maxLines="2"
            android:textColor="@color/detail_vacation_tiyan_tese"
            android:text="@string/vacation_detail_feiyong_include_title" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="4dp"
            android:textColor="@color/detail_vacation_tiyan_tese"
            android:text="@string/vacation_detail_feiyong_include_subtitle"
            android:textSize="12sp"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="18dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginBottom="10dp"
            android:textColor="@color/detail_vacation_tiyan_tese"
            android:text="@string/vacation_detail_feiyong_include1"
            android:textSize="12sp"/>

    </RelativeLayout>

    <RelativeLayout
    android:id="@+id/ll_vacation_detail_Q_A"
    android:layout_width="fill_parent"
    android:layout_height="48.0dip"
    android:layout_marginTop="@dimen/vacation_common_cell_margin"
    android:background="@drawable/selector_cell_two_line"
    android:paddingLeft="@dimen/common_margin"
    android:paddingRight="@dimen/common_margin" >

    <TextView
        android:id="@id/tv_vacation_detail_date_tip"
        style="@style/tv_list_primary_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="11.0dip"
        android:drawableLeft="@drawable/icon_visa_details_prompt"
        android:drawablePadding="11.0dip"
        android:gravity="center_vertical"
        android:text="@string/vacation_online_qa" />

    <TextView
        android:id="@id/tv_vacation_detail_date"
        style="@style/tv_info_hint_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/tv_vacation_detail_date_tip"
        android:drawablePadding="11.0dip"
        android:drawableRight="@drawable/arrow_list_common"
        android:ellipsize="end"
        android:gravity="center|right"
        android:hint="0条回答"
        android:singleLine="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_vacation_detail_tips"
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/selector_cell_two_line"
        android:paddingLeft="@dimen/common_margin"
        android:paddingRight="@dimen/common_margin" >

        <TextView
            android:id="@+id/tv_vacation_detail_tips_l"
            style="@style/tv_list_primary_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="11.0dip"
            android:drawableLeft="@drawable/icon_travel_details_friendlyreminder"
            android:drawablePadding="11.0dip"
            android:gravity="center_vertical"
            android:text="@string/vacation_detail_tips" />

        <TextView
            android:id="@+id/tv_vacation_detail_tips_ll"
            style="@style/tv_info_hint_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/TextView02"
            android:drawablePadding="11.0dip"
            android:drawableRight="@drawable/arrow_list_common"
            android:ellipsize="end"
            android:gravity="center|right"
            android:singleLine="true" />
    </RelativeLayout>

</LinearLayout>